ACTUALLY fixed the alignment of autocomplete in campaign form.

--- a/src/css_modules/form.module.css
+++ b/src/css_modules/form.module.css
@@ -53,6 +53,9 @@
             width: 80%;
             height: 50px;
 
+            display: flex;
+            flex-direction: column;
+            
             align-self: center;
             justify-self: center;
 
